# ai-software-development-team

./: .env.example  .env.production.template  .gitignore  DEPLOYMENT_REPORT.md  Makefile  PROGRESS.md  README.md  RECOVERY_FIX_REPORT.md  docker-compose.dev.yml  docker-compose.secrets.yml  docker-compose.yml  project_manifest.json  recover_project.py  requirements.txt
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  2959d9a9b146_change_status_column_to_varchar.py
backend/app/: config.py  main.py  server.py
backend/app/agents/: architect_agent.py  base.py  code_review_agent.py  developer_agent.py  documentation_agent.py  registry.py  requirements_agent.py  tester_agent.py
backend/app/agents/prompts/: architect.py  code_review.py  developer.py  documentation.py  requirements.py  tester.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: projects.py
backend/app/core/: exceptions.py  logging.py  middleware.py  security.py
backend/app/db/: base.py  session.py
backend/app/graph/: edges.py  nodes.py  pipeline.py  state.py  validation.py
backend/app/services/: github_service.py  llm_service.py  persist_service.py  storage_service.py  vector_store.py
backend/app/worker/: celery_app.py  events.py  tasks.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/tests/: conftest.py
backend/tests/fixtures/: mock_agent_responses.json  sample_idea.txt
backend/tests/integration/: conftest.py  test_api.py  test_e2e.py  test_pipeline.py
backend/tests/unit/: test_architect_agent.py  test_artifact_models.py  test_base_repository.py  test_code_review_agent.py  test_config.py  test_developer_agent.py  test_documentation_agent.py  test_domain_models.py  test_edges.py  test_enums.py  test_exceptions.py  test_graph_resume.py  test_llm_service.py  test_middleware.py  test_nodes.py  test_persist_service.py  test_recovery.py  test_registry.py  test_requirements_agent.py  test_security.py  test_server.py  test_session.py  test_state.py  test_storage_service.py  test_tester_agent.py  test_validation.py  test_vector_store.py  test_worker_tasks.py
(+63 files in other folders)
