[project]
name = "ai-software-dev-team"
version = "1.0.0"
description = "Multi-agent AI system that simulates a complete software development team"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.30,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "alembic>=1.13.0,<2.0.0",
    "langgraph>=0.1.10,<1.0.0",
    "langchain-openai>=0.1.0,<1.0.0",
    "openai>=1.30.0,<2.0.0",
    "chromadb>=0.5.0,<1.0.0",
    "celery>=5.4.0,<6.0.0",
    "redis>=5.0.0,<6.0.0",
    "httpx>=0.27.0,<1.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "structlog>=24.4.0,<25.0.0",
    "tenacity>=8.3.0,<9.0.0",
    "orjson>=3.10.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "watchfiles>=0.22.0",
]
prod = ["gunicorn>=22.0.0"]

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]
ignore = ["B008", "N818"]

[tool.ruff.lint.per-file-ignores]
"app/agents/prompts/*" = ["E501"]
"tests/conftest.py" = ["E501"]
"tests/unit/test_artifact_models.py" = ["E501"]
"tests/unit/test_requirements_agent.py" = ["E501"]
"tests/unit/test_architect_agent.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = false
ignore_missing_imports = true
disallow_any_generics = false
warn_return_any = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "app.agents.*"
disable_error_code = ["override", "union-attr"]

[[tool.mypy.overrides]]
module = "app.graph.nodes"
disable_error_code = ["no-untyped-call", "arg-type"]

[[tool.mypy.overrides]]
module = "app.worker.tasks"
disable_error_code = ["no-untyped-def"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
